# math-in-c

./: .gitignore  README.md
Other/RNG/: main.c
yelleles4/servers/: server.js
yelleles4/servers/express/javaScriptExpress/: app.js
yelleles4/servers/game/: app.js  index.html  package.json
yelleles4/servers/httpwtf/chatIO/: app.js  index.html  package.json
yelleles4/wis/degrees/: main.c  sdlFunc.c  sdlFunc.h  test
yelleles4/wis/line/: Makefile  main.c  testProgram
yelleles4/wis/line/src/: gameFunc.c  gameFunc.h  sdlFunc.c  sdlFunc.h
yelleles4/wis/lineair/: main.c  test  testProgram
yelleles4/wis/lineair/src/: sdlFunc.c  sdlFunc.h
yelleles4/wis/planets/: CMakeLists.txt  main.c  planets  test
yelleles4/wis/planets/src/: main.c
yelleles4/wis/protractor/: main.c  test
yelleles4/wis/protractor/art/: bmp.xpm
yelleles4/wis/protractor/src/: sdlFunc.c  sdlFunc.h
yelleles4/wis/vectors/: sdlFunc.h  test  vector.c  vector.h
